--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -6,12 +6,12 @@ $button-background-hover: darken($button-background,10%);
 $button-background-active: darken($button-background-hover,10%);
 // $button-border-color: $border-color-light;
 
-$button-primary-color: rgba(#fff, 0.9);
+$button-primary-color: rgba(#fff, 0.95);
 $button-primary-background: $color-primary;
 $button-primary-background-hover: lighten($button-primary-background,8%);
 // $button-primary-border: darken($button-primary-bg, 4%);
 
-$button-accent-color: rgba(#fff, 0.9);
+$button-accent-color: rgba(#fff, 0.95);
 $button-accent-background: $color-secondary;
 $button-accent-background-hover: lighten($button-accent-background,8%);
 // $button-accent-border: darken($button-secondary-bg, 4%);
@@ -25,8 +25,10 @@ $button-height-large: 3rem;
 $button-font-large: 1.2rem;
 $button-font-small: 0.8rem;
 
-$button-padding-horizontal: 1em;
+$button-padding-horizontal: 0.75em;
 $button-margin: 4px;
 $button-border-radius: 3px;
 
-$button-transition: background-color 0.4s, transform 0.2s;
+$button-box-shadow: inset 0 -3px 0 rgba(0,0,0,.05), inset 0 0 1px rgba(0,0,0,.5);
+
+$button-transition: background-color 0.2s, transform 0.2s, box-shadow 0.2s;
