--- a/src/br-button.scss
+++ b/src/br-button.scss
@@ -6,12 +6,13 @@
   // overflow: hidden;
   display: inline-flex;
   align-items: center;
+  margin-top: 0.5rem;
   padding: 0 $button-padding-horizontal;
   height: $button-height;
   line-height: $button-height;
   color: $button-color;
-  border: 1px solid rgba(#000, 0.15);
   text-align: left;
+  border: none;
   text-decoration: none;
   outline: none;
   cursor: pointer;
@@ -22,26 +23,24 @@
   transition: $button-transition;
   transform: scale(1);
   user-select: none;
+  box-shadow: $button-box-shadow;
 
   &::-moz-focus-inner {
     border: 0;
   }
 
   &:not(.btn-block) + &:not(.btn-block) {
-    margin-left: 1rem;
+    margin-left: 0.5rem;
   }
 
   &:hover:not([disabled]),
   &:focus:not(:active):not([disabled]) {
     background-color: $button-background-hover;
-    // box-shadow: rgba(#000, 0.2) 0 2px 2px;
   }
 
   &:active:not([disabled]) {
     background-color: $button-background;
     transform: scale(0.95);
-    // transform: translateY(2px);
-    box-shadow: none;
   }
 
   &[disabled] {
