Added cssmin to grunt default.

--- a/src/br-button.scss
+++ b/src/br-button.scss
@@ -1,27 +1,13 @@
-@import '../../bedrock/scss/variables';
-
 :host {
-  display: inline-block;
+  display: inline;
 }
 
-.btn-small {
-  height: $button-height-small;
-  line-height: $button-height-small;
-  font-size: $button-font-small;
-
-  .icon {
-    --iron-icon-height: 16px;
-    --iron-icon-width: 16px;
-  }
+.btn-small .icon {
+  --iron-icon-height: 16px;
+  --iron-icon-width: 16px;
 }
 
-.btn-large {
-  height: $button-height-large;
-  line-height: $button-height-large;
-  font-size: $button-font-large;
-
-  .icon {
-    --iron-icon-height: 32px;
-    --iron-icon-width: 32px;
-  }
+.btn-large .icon {
+  --iron-icon-height: 32px;
+  --iron-icon-width: 32px;
 }
